2004-06-12  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m.el (w3m-output-coding-system): Change default value for w3m-m17n.

	* w3m-bug.el (report-emacs-w3m-bug-system-informations): 
	Add w3m-input-coding-system and w3m-output-coding-system.

2004-06-11  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m.el (w3m-meta-content-type-charset-regexp)
	(w3m-meta-charset-content-type-regexp)
	(w3m-meta-refresh-content-regexp)
	(w3m-meta-content-refresh-regexp): Removed.
	(w3m-detect-meta-charset, w3m-remove-meta-charset-tags)
	(w3m-check-refresh-attribute): Use `w3m-parse-attributes' instead
	of above regexp.
	(w3m-rendering-buffer): Don't call `w3m-remove-meta-charset-tags'
	for w3m-m17n.

2004-06-10  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* shimbun/sb-namazu.el: Rewrite.

	* shimbun/sb-fml.el (shimbun-make-contents): Guard error at 
	unsupposed page.

2004-06-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-make-new-session): Doc fix.
	(w3m-safe-view-this-url): Use w3m-goto-url-new-session only when a
	user invokes this command in a buffer not being running the
	w3m-mode.

2004-06-07  Masatake YAMATO  <jet@gyve.org>

	* w3m-hist.el (w3m-history-store-position): Fix a wrong message.

2004-06-07  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-filter.el (w3m-filter-rules): Relax the condition.

2004-06-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-make-new-session): Doc fix.
	(w3m-safe-view-this-url): Use w3m-goto-url-new-session instead of
	w3m-goto-url when w3m-make-new-session is non-nil.

2004-06-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-make-new-session): New user option.
	(w3m): Make a new emacs-w3m buffer if w3m-make-new-session is
	non-nil and a user specifies a url string.

	* shimbun/sb-cnn-jp.el (shimbun-cnn-jp-x-face-alist): New variable.

2004-06-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-group-table): Add the
	editorial group and the tensei-jingo group as tenjin.